# PickM8

./: .gitignore  app.py  config.yaml  environment.yml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
active_learning/: __init__.py  autoparty_models.py  encodings.py  feature_engineering.py  ml_base.py  ml_models.py  ordinal_models.py  pytorch_models.py  sklearn_models.py
analysis/: __init__.py  grading.py  pose_quality.py  similarity.py  statistics.py
config/: __init__.py  defaults.py  loader.py
core/: active_learning.py  fingerprints.py  interaction_functions.py  interaction_wrapper.py  luna_wrapper.py  plip_interactions.py
core/active_learning/: __init__.py  business_logic.py  config.py  encoding.py  (+4 more)
data/: __init__.py  fingerprints.py  interactions.py  ml_models.py  molecules.py  sessions.py
data_io/: __init__.py
features/: __init__.py
machine_learning/: __init__.py  ml_models.py
pages/: 1_🏠_Home.py  1_🔧_Setup.py  2_🎯_Active_Learning.py  2_📤_Upload_Screen.py  3_🎯_Active_Learning.py  3_📊_Results.py  4_⬇️_Export.py  4_📊_Results.py  5_⚙️_Settings.py
sessions/: __init__.py  sessions.py
test_data/: README.md
tests/: test_active_learning_models.py  test_core_functionality.py  test_create_complex_biopython.py  test_data_processing.py  test_encoding_model_compatibility.py  test_encodings.py  test_fingerprints.py  test_grading.py  test_interactions.py  test_ml_models.py  test_ml_workflow.py  test_molecular_fingerprints.py  test_molecule_reader.py  test_plip_real_data.py  test_posecheck_analysis.py  test_posecheck_utils.py  test_processing.py  test_prolif_interactions.py  test_session_management.py
ui/: __init__.py
ui_components/: forms.py  molecule_viewer.py  progress_displays.py
utils/: __init__.py  config.py  data_processing.py  export_utils.py  io_handlers.py  molecule_utils.py  posecheck_utils.py  poseview_utils.py  processing.py  visualization.py
(+67 files in other folders)
